--- a/src/app/active-screen/active-screen.component.html
+++ b/src/app/active-screen/active-screen.component.html
@@ -1,3 +1,15 @@
-<p>
-  active-screen works!
-</p>
+<div class="active-screen container" *ngIf="images.length > 0">
+  <div class="row">
+    <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="col-sm-3 img">
+      <img [src]="serverAddress + '' + img.relative_path_to_thumbnail" />
+    </div>
+  </div>
+  <div *ngIf="activeImage" class="col-sm-12">
+    <a (click)="onDeleteClick()">
+      <mat-icon>delete</mat-icon>
+    </a>
+    <a [href]="serverAddress + '' + activeImage.relative_path_to_thumbnail" [download]="activeImage.original_name">
+      <mat-icon>file_download</mat-icon>
+    </a>
+  </div>
+</div>
