--- a/src/app/delete-screen/delete-screen.component.html
+++ b/src/app/delete-screen/delete-screen.component.html
@@ -1,4 +1,4 @@
-<div class="active-screen container" *ngIf="images.length > 0">
+<div class="delete-screen container" *ngIf="images.length > 0">
   <div class="row">
     <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="col-sm-3 img">
       <img [src]="serverAddress + '' + img.relative_path_to_thumbnail" />
