--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,5 @@
 </ul>
 <app-active-screen *ngIf="activeItem === 1"></app-active-screen>
 <app-delete-screen *ngIf="activeItem === 2"></app-delete-screen>
+<app-upload-screen *ngIf="activeItem === 3"></app-upload-screen>
 
