--- a/src/app/delete-screen/delete-screen.component.html
+++ b/src/app/delete-screen/delete-screen.component.html
@@ -1,10 +1,10 @@
-<div class="delete-screen container" *ngIf="images.length > 0">
+<div class="delete-screen" *ngIf="images.length > 0">
   <div class="row">
-    <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="col-sm-3 img">
+    <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="col-sm-4 col-md-3 img-container">
       <img [src]="serverAddress + '' + img.relative_path_to_thumbnail" />
     </div>
   </div>
-  <div *ngIf="activeImage" class="col-sm-12">
+  <div *ngIf="activeImage" class="col-sm-12 buttons-holder">
     <a (click)="onRestoreClick()">
       <mat-icon>restore</mat-icon>
     </a>
