--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('//fonts.googleapis.com/css?family=Lato:300,400,700|Material+Icons');
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
+
+.gallery {
+  background-color: #E0F2F1;
+}
 
