--- a/src/app/upload-screen/upload-screen.component.html
+++ b/src/app/upload-screen/upload-screen.component.html
@@ -1,10 +1,12 @@
 <div class="upload-screen container">
   <div class="row">
-    <button type="button" class="btn btn-warning" (click)="onChooseFileClick($event)">Choose an image</button>
-    <button type="button" class="btn btn-warning" [disabled]="!data" (click)="onUploadClick()">Upload image</button>
-    <input type="file" name="file" accept="image/*" #uploadFileField (change)="onAttachFile()">
-    <div *ngIf="data">
-      <img [src]="data" width="200" />
+    <div class="col-xs-12 content">
+      <button type="button" class="btn btn-success" (click)="onChooseFileClick($event)">Choose an image</button>
+      <button type="button" class="btn btn-success" [disabled]="!data" (click)="onUploadClick()">Upload image</button>
+      <input type="file" name="file" accept="image/*" #uploadFileField (change)="onAttachFile()">
+      <div *ngIf="data" class="img-container">
+        <img [src]="data" width="200" />
+      </div>
     </div>
   </div>
 </div>
