--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -32,6 +32,12 @@
   text-align: center;
 }
 
+.no-img-info {
+  font-size: 22px;
+  text-align: center;
+  margin-top: 40px;
+}
+
 @media (min-width: 768px) {
   .nav-container {
     text-align: right;
