--- a/src/app/active-screen/active-screen.component.html
+++ b/src/app/active-screen/active-screen.component.html
@@ -1,4 +1,4 @@
-<div class="active-screen" *ngIf="images.length > 0">
+<div class="active-screen" *ngIf="images.length > 0; else noImgBlock">
   <div class="row">
     <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="col-sm-4 col-md-3 img-container">
       <img [src]="serverAddress + '' + img.relative_path_to_thumbnail" />
@@ -13,3 +13,6 @@
     </a>
   </div>
 </div>
+<ng-template #noImgBlock>
+  <div class="no-img-info">No photos to display</div>
+</ng-template>
