--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div class="header">
+  <div class="content">
+    My library
+  </div>
+</div>
 <div class="container">
   <div class="nav-container">
     <div class="btn-group" role="group">
