--- a/src/styles.less
+++ b/src/styles.less
@@ -3,6 +3,6 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 
 .gallery {
-  background-color: #E0F2F1;
+  background-color: #f3f4f8;
 }
 
