--- a/src/app/active-screen/active-screen.component.html
+++ b/src/app/active-screen/active-screen.component.html
@@ -1,10 +1,13 @@
 <div class="active-screen" *ngIf="images.length > 0; else noImgBlock">
   <div class="row">
-    <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="col-sm-4 col-md-3 img-container">
+    <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="img-container">
       <img [src]="serverAddress + '' + img.relative_path_to_thumbnail" />
+      <div class="img-text">
+        <p>Lorem ipsum</p>
+      </div>
     </div>
   </div>
-  <div *ngIf="activeImage" class="col-sm-12 buttons-holder">
+  <div *ngIf="activeImage" class="buttons-holder">
     <a (click)="onDeleteClick()">
       <mat-icon>delete</mat-icon>
     </a>
