--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,21 +1,41 @@
-.img-container {
-  height: 220px;
-  text-align: center;
+.row {
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-left: 5px;
-  padding-right: 5px;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-flow: row wrap;
+  align-content: flex-end;
+}
+
+.img-container {
+  min-height: 200px;
+  min-width: 200px;
+  text-align: center;
+  margin: 20px;
+  border: 1px solid rgb(225, 226, 232);
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.img-text {
+  background-color: #fff;
+  p {
+    margin-top: 20px;
+  }
 }
 
 .active {
-  background-color: #B2DFDB;
+  border-color: #000;
 }
 
 .buttons-holder {
   margin-top: 20px;
   text-align: center;
   background-color: #00897B;
+  position: fixed;
+  bottom: 0;
 
   a {
     color: #fff;
@@ -62,6 +82,12 @@
       width: 750px;
     }
   }
+  .buttons-holder {
+    width: 750px;
+  }
+  .row {
+    justify-content: flex-start;
+  }
 }
 
 @media (min-width: 992px) {
@@ -69,6 +95,9 @@
     .content {
       width: 970px;
     }
+  }
+  .buttons-holder {
+    width: 970px;
   }
 }
 
@@ -79,5 +108,8 @@
       padding-top: 100px;
       width: 1170px;
     }
+  }
+  .buttons-holder {
+    width: 1170px;
   }
 }
