Update to menu buttons

--- a/src/styles.less
+++ b/src/styles.less
@@ -4,5 +4,22 @@
 
 .gallery {
   background-color: #f3f4f8;
+
+  .btn-default.active {
+    background-color: transparent !important;
+    box-shadow: none;
+  }
+
+  .btn-default {
+    background-color: rgb(92, 97, 125) !important;
+    border-color: rgb(92, 97, 125) !important;
+    border-width: 2px;
+    color: #fff;
+    outline: none !important;
+  }
+
+  .btn-default:hover, .btn-default:focus {
+    color: #fff;
+  }
 }
 
