Update to styles

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -36,6 +36,8 @@
   background-color: #00897B;
   position: fixed;
   bottom: 0;
+  left: 0;
+  width: 100%;
 
   a {
     color: #fff;
@@ -82,9 +84,6 @@
       width: 750px;
     }
   }
-  .buttons-holder {
-    width: 750px;
-  }
   .row {
     justify-content: flex-start;
   }
@@ -96,9 +95,6 @@
       width: 970px;
     }
   }
-  .buttons-holder {
-    width: 970px;
-  }
 }
 
 @media (min-width: 1200px) {
@@ -108,8 +104,5 @@
       padding-top: 100px;
       width: 1170px;
     }
-  }
-  .buttons-holder {
-    width: 1170px;
   }
 }
