--- a/src/app/upload-screen/upload-screen.component.less
+++ b/src/app/upload-screen/upload-screen.component.less
@@ -6,3 +6,9 @@ input[type=file] {
   text-align: center;
   margin: 80px 0;
 }
+
+.img-container {
+  margin: 40px auto;
+  width: 200px;
+  min-height: unset;
+}
