Minor update to styles

--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,7 @@
   .btn-default.active {
     background-color: transparent !important;
     box-shadow: none;
+    color: rgb(92, 97, 125) !important;;
   }
 
   .btn-default {
