Update to styles

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -17,6 +17,7 @@
   background-color: #fff;
   border-radius: 5px;
   overflow: hidden;
+  box-shadow: 3px 1px 6px 2px #e1e2e8;
 }
 
 .img-text {
@@ -32,8 +33,9 @@
 
 .buttons-holder {
   margin-top: 20px;
+  padding: 10px;
   text-align: center;
-  background-color: #00897B;
+  background-color: rgb(79, 89, 124);
   position: fixed;
   bottom: 0;
   left: 0;
@@ -64,8 +66,8 @@
   background-color: #fff;
   height: 75px;
   .content {
-    color: #394366;
-    font-size: 22px;
+    color: rgb(72, 80, 111);
+    font-size: 24px;
     margin: auto;
     padding-right: 15px;
     padding-left: 15px;
@@ -101,7 +103,7 @@
   .header {
     height: 150px;
     .content {
-      padding-top: 100px;
+      padding-top: 80px;
       width: 1170px;
     }
   }
