Update to styles(2)

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -89,6 +89,10 @@
   .row {
     justify-content: flex-start;
   }
+  .buttons-holder {
+    width: 750px;
+    left: unset;
+  }
 }
 
 @media (min-width: 992px) {
@@ -96,6 +100,9 @@
     .content {
       width: 970px;
     }
+  }
+  .buttons-holder {
+    width: 970px;
   }
 }
 
@@ -106,5 +113,8 @@
       padding-top: 80px;
       width: 1170px;
     }
+  }
+  .buttons-holder {
+    width: 1170px;
   }
 }
