Update to styles(3)

--- a/src/styles.less
+++ b/src/styles.less
@@ -17,6 +17,7 @@
     border-width: 2px;
     color: #fff;
     outline: none !important;
+    padding: 6px 30px !important;
   }
 
   .btn-default:hover, .btn-default:focus {
