Update to styles(4)

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -44,6 +44,9 @@
 
   a {
     color: #fff;
+    cursor: pointer;
+    text-decoration: none;
+    margin: 5px;
 
     &.inactive {
       color: #BDBDBD;
