--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -8,6 +8,10 @@
   align-content: flex-end;
 }
 
+.container {
+  margin-bottom: 50px;
+}
+
 .img-container {
   min-height: 200px;
   min-width: 200px;
