--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('//fonts.googleapis.com/css?family=Lato:300,400,700|Material+Icons');
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 .gallery {
   background-color: #f3f4f8;
