--- a/src/app/active-screen/active-screen.component.html
+++ b/src/app/active-screen/active-screen.component.html
@@ -11,11 +11,20 @@
     <a (click)="onDeleteClick()">
       <mat-icon>delete</mat-icon>
     </a>
-    <a [ngClass]="{'inactive': wasImageDownload()}" [href]="serverAddress + '' + activeImage.relative_path_to_original_image" [download]="activeImage.original_name" (click)="onDownloadClick($event)">
+    <a [href]="serverAddress + '' + activeImage.relative_path_to_original_image" [download]="activeImage.original_name" (click)="onDownloadClick($event)">
       <mat-icon>file_download</mat-icon>
     </a>
   </div>
 </div>
 <ng-template #noImgBlock>
   <div class="no-img-info">No photos to display</div>
+</ng-template>
+<ng-template #confirmationWindow>
+    <app-confirmation
+      (onCancelClick)="closeDialog()"
+      (onConfirmationClick)="confirmDeletion()"
+      confirmBtnText="Delete"
+      cancelBtnText="Cancel"
+      confirmationText="Are you sure you want to delete this image?">
+    </app-confirmation>
 </ng-template>
