--- a/src/app/upload-screen/upload-screen.component.html
+++ b/src/app/upload-screen/upload-screen.component.html
@@ -10,3 +10,12 @@
     </div>
   </div>
 </div>
+<ng-template #confirmationWindow>
+  <app-confirmation
+    (onCancelClick)="closeDialog()"
+    (onConfirmationClick)="confirmDeletion()"
+    confirmBtnText="Delete"
+    cancelBtnText="Cancel"
+    confirmationText="Are you sure you want to delete this image?">
+  </app-confirmation>
+</ng-template>
