--- a/src/app/active-screen/active-screen.component.html
+++ b/src/app/active-screen/active-screen.component.html
@@ -1,7 +1,7 @@
 <div class="active-screen" *ngIf="images.length > 0; else noImgBlock">
   <div class="row">
     <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="img-container">
-      <img [src]="serverAddress + '' + img.relative_path_to_thumbnail" />
+      <img [src]="img.url" />
       <div class="img-text">
         <p>Lorem ipsum</p>
       </div>
