--- a/src/app/delete-screen/delete-screen.component.html
+++ b/src/app/delete-screen/delete-screen.component.html
@@ -1,7 +1,7 @@
 <div class="delete-screen" *ngIf="images.length > 0; else noImgBlock">
   <div class="row">
     <div *ngFor="let img of images" [ngClass]="{'active': activeImage && activeImage.id === img.id}" (click)="activeImage = img" class="img-container">
-      <img [src]="img.url" />
+      <img *ngIf="img.url" [src]="img.url" />
       <div class="img-text">
         <p>Lorem ipsum</p>
       </div>
